# UVMburger

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/src/: App.jsx  index.css
app/src/components/: AnalogyBox.jsx  BurgerGraphic.jsx  CodeBlock.jsx  CommentSection.jsx  MermaidDiagram.jsx  Navigation.jsx  Quiz.jsx  Sidebar.jsx  UVMArchitectureViz.jsx
app/src/data/: modules.json
app/src/layouts/: MainLayout.jsx
content/: 00_index.md  01_intro.md  02_ingredients.md  03_dut.md  03_physical_location.md  04_meet_the_team.md  04_seq_item.md  05_sequencer.md  05_work_station.md  06_driver.md  06_restaurant_communications.md  07_monitor.md  07_quality_control.md  08_laws_of_kitchen.md  08_scoreboard.md  09_agent_env.md  09_grand_opening.md  10_full_run.md  10_operating_instructions.md  11_complete_example.md  11_launch.md  12_final_inspection.md
content/story/: whole_story.md
src/: build_content.py
